tests/conformance/parse/valid/type_annotation_in_block.ks
val _ = {
  val y: Int = 1
  val z: Bool = True
  ()
}
