tests/conformance/parse/invalid/unclosed_block.ks
// EXPECT: Unmatched
val x = { val y = 1
